// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When registering, deactivating, and reactivating a user As a super admin again should reactivate the user 1`] = `
Object {
  "reactivateUser": Object {
    "user": Object {
      "active": true,
      "firstName": "New",
      "lastName": "User",
    },
  },
}
`;

exports[`When registering, deactivating, and reactivating a user As the new user should get the correct current user 1`] = `"New"`;

exports[`When registering, deactivating, and reactivating a user As the new user should see the user in the database 1`] = `
Object {
  "userById": Object {
    "active": false,
    "firstName": "New",
    "lastName": "User",
  },
}
`;

exports[`When registering, deactivating, and reactivating a user As the reactivated user should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "lastName": "User",
  },
}
`;
